Mobile day controller ready

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <header class="top-bar">
       <ul class="title-area">
         <li class="name">
-          <h1 class="logo"><a href="#">Manifest Digital</a></h1>  
+          <h1 class="logo"><a href="#">Manifest Digital</a></h1>
         </li>
         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
       </ul>
@@ -23,14 +23,33 @@
         </ul>
       </nav>
     </header>
-    
+
     <div class="main">
       <section class="calendar-grid">
+        <menu>
+          <ol class="mobile-days-controller">
+            <li>
+              <a href="#monday" class="mobile-day-controller"><date title="date will appear here"><span class="day">Mon</span> <span class="date">26</span><sup>th</sup></date></a>
+            </li>
+            <li>
+              <a href="#tuesday" class="mobile-day-controller is-active"><date title="date will appear here"><span class="day">Tue</span> <span class="date">27</span><sup>th</sup></date></a>
+            </li>
+            <li>
+              <a href="#wednesday" class="mobile-day-controller"><date title="date will appear here"><span class="day">Wed</span> <span class="date">28</span><sup>th</sup></date></a>
+            </li>
+            <li>
+              <a href="#thursday" class="mobile-day-controller"><date title="date will appear here"><span class="day">Thr</span> <span class="date">29</span><sup>th</sup></date></a>
+            </li>
+            <li>
+              <a href="#friday" class="mobile-day-controller"><date title="date will appear here"><span class="day">Fri</span> <span class="date">30</span><sup>th</sup></date></a>
+            </li>
+          </ol>
+        </menu>
         <ol class="days-list">
-          <li>
+          <li class="day column">
             <article class="day-group">
               <header class="day-header">
-                <h4 class="subheader">Mon 28<sup>th</sup></h4>
+                <h3 class="subheader center"><date title="date will appear here">Mon 26<sup>th</sup></date></h3>
               </header>
               <a href="#" class="panel task">
                 <strong>4 hours</strong> on Project Name for Client Name
@@ -40,10 +59,42 @@
               </a>
             </article>
           </li>
+          <li class="day column">
+            <article class="day-group">
+              <header class="day-header">
+                <h3 class="subheader center"><date title="date will appear here">Tue 27<sup>th</sup></date></h3>
+              </header>
+              <a href="#" class="panel task">
+                <strong>8 hours</strong> on Project Name for Client Name
+              </a>
+            </article>
+          </li>
+          <li class="day column">
+            <article class="day-group">
+              <header class="day-header">
+                <h3 class="subheader center"><date title="date will appear here">Wed 28<sup>th</sup></date></h3>
+              </header>
+              nothing yet
+            </article>
+          </li>
+          <li class="day column">
+            <article class="day-group">
+              <header class="day-header">
+                <h3 class="subheader center"><date title="date will appear here">Thr 29<sup>th</sup></date></h3>
+              </header>
+            </article>
+          </li>
+          <li class="day column">
+            <article class="day-group">
+              <header class="day-header">
+                <h3 class="subheader center"><date title="date will appear here">Fri 30<sup>th</sup></date></h3>
+              </header>
+            </article>
+          </li>
         </ol>
       </section>
       <section class="timeform-grid">
-        
+
       </section>
     </div>
 
