Adding self clearing to the mobile days controller

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
               </a>
             </article>
           </li>
-          <li class="day column">
+          <li class="day column is-active">
             <article class="day-group">
               <header class="day-header">
                 <h3 class="subheader center"><date title="date will appear here">Tue 27<sup>th</sup></date></h3>
