Working on mobile calendar grid

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
           </ol>
         </menu>
         <ol class="days-list">
-          <li class="day column">
+          <li class="day-column">
             <article class="day-group">
               <header class="day-header">
                 <h3 class="subheader center"><date title="date will appear here">Mon 26<sup>th</sup></date></h3>
@@ -59,7 +59,7 @@
               </a>
             </article>
           </li>
-          <li class="day column is-active">
+          <li class="day-column is-active">
             <article class="day-group">
               <header class="day-header">
                 <h3 class="subheader center"><date title="date will appear here">Tue 27<sup>th</sup></date></h3>
@@ -69,7 +69,7 @@
               </a>
             </article>
           </li>
-          <li class="day column">
+          <li class="day-column">
             <article class="day-group">
               <header class="day-header">
                 <h3 class="subheader center"><date title="date will appear here">Wed 28<sup>th</sup></date></h3>
@@ -77,14 +77,14 @@
               nothing yet
             </article>
           </li>
-          <li class="day column">
+          <li class="day-column">
             <article class="day-group">
               <header class="day-header">
                 <h3 class="subheader center"><date title="date will appear here">Thr 29<sup>th</sup></date></h3>
               </header>
             </article>
           </li>
-          <li class="day column">
+          <li class="day-column">
             <article class="day-group">
               <header class="day-header">
                 <h3 class="subheader center"><date title="date will appear here">Fri 30<sup>th</sup></date></h3>
