Day columns ready

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Timesheet</title>
     <meta name="description" content="Prototype app">
 
-    <link rel="stylesheet" href="assets/css/style.autoprefixed.css">
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
     <header class="top-bar">
@@ -74,7 +74,7 @@
               <header class="day-header">
                 <h3 class="subheader center"><date title="date will appear here">Wed 28<sup>th</sup></date></h3>
               </header>
-              nothing yet
+              <div class="task-empty">Nothing billed yet</div>
             </article>
           </li>
           <li class="day-column">
@@ -82,6 +82,7 @@
               <header class="day-header">
                 <h3 class="subheader center"><date title="date will appear here">Thr 29<sup>th</sup></date></h3>
               </header>
+              <div class="task-empty">Nothing billed yet</div>
             </article>
           </li>
           <li class="day-column">
@@ -89,6 +90,7 @@
               <header class="day-header">
                 <h3 class="subheader center"><date title="date will appear here">Fri 30<sup>th</sup></date></h3>
               </header>
+              <div class="task-empty">Nothing billed yet</div>
             </article>
           </li>
         </ol>
