--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <header class="top-bar">
       <ul class="title-area">
         <li class="name">
-          <h1 class="logo"><a href="#">Manifest Digital</a></h1>
+          <h1 class="logo"><a href="#">Manifest Digital Timesheets</a></h1>
         </li>
         <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
       </ul>
@@ -25,6 +25,17 @@
     </header>
 
     <div class="main">
+      <menu class="calendar-header">
+        <a href="#settings">Settings</a>
+
+        <ul>
+          <li><a href="#previous-week" class="foundicon-circle-left-arrow">Previous Week</a></li>
+          <li><h2><a href="#months">October 2013</a></h2></li>
+          <li><a href="#next-week">Next Week</a></li>
+        </ul>
+
+        <a href="#add-time">Add Time</a>
+      </menu>
       <section class="calendar-grid">
         <menu>
           <ol class="mobile-days-controller">
