--- a/public/index.html
+++ b/public/index.html
@@ -19,22 +19,22 @@
       </ul>
       <nav class="top-bar-section">
         <ul class="right">
-          <li><a href="#">logout</a></li>
+          <li><a href="#">Ezekiel Binion, logout</a></li>
         </ul>
       </nav>
     </header>
 
     <div class="main">
-      <menu class="calendar-header">
-        <a href="#settings">Settings</a>
+      <menu class="week-header">
+        <a href="#settings" class="foundicon-settings icon" title="Settings"></a>
 
-        <ul>
-          <li><a href="#previous-week" class="foundicon-circle-left-arrow">Previous Week</a></li>
+        <ul class="week-controls">
+          <li><a href="#previous-week" class="foundicon-left-arrow icon"></a></li>
           <li><h2><a href="#months">October 2013</a></h2></li>
-          <li><a href="#next-week">Next Week</a></li>
+          <li><a href="#next-week" class="foundicon-right-arrow icon"></a></li>
         </ul>
 
-        <a href="#add-time">Add Time</a>
+        <a href="#add-time" class="foundicon-plus icon" title="Add Time"></a>
       </menu>
       <section class="calendar-grid">
         <menu>
@@ -68,6 +68,9 @@
               <a href="#" class="panel task">
                 <strong>6 hours</strong> on Project Name for Client Name
               </a>
+              <a href="#add-time" class="button expand">
+                <i class="foundicon-plus"></i> Add time
+              </a>
             </article>
           </li>
           <li class="day-column is-active">
@@ -78,6 +81,9 @@
               <a href="#" class="panel task">
                 <strong>8 hours</strong> on Project Name for Client Name
               </a>
+              <a href="#add-time" class="button expand">
+                <i class="foundicon-plus"></i> Add time
+              </a>
             </article>
           </li>
           <li class="day-column">
@@ -87,6 +93,9 @@
               </header>
               <div class="task-empty">Nothing billed yet</div>
             </article>
+            <a href="#add-time" class="button expand">
+              <i class="foundicon-plus"></i> Add time
+            </a>
           </li>
           <li class="day-column">
             <article class="day-group">
@@ -95,6 +104,9 @@
               </header>
               <div class="task-empty">Nothing billed yet</div>
             </article>
+            <a href="#add-time" class="button expand">
+              <i class="foundicon-plus"></i> Add time
+            </a>
           </li>
           <li class="day-column">
             <article class="day-group">
@@ -103,6 +115,9 @@
               </header>
               <div class="task-empty">Nothing billed yet</div>
             </article>
+            <a href="#add-time" class="button expand">
+              <i class="foundicon-plus"></i> Add time
+            </a>
           </li>
         </ol>
       </section>
